[gd_scene load_steps=45 format=3 uid="uid://q7xeoqrnxt2h"]

[ext_resource type="Script" path="res://Main game/player/player.gd" id="1_5o2at"]
[ext_resource type="PackedScene" uid="uid://dxwl5anjl28pj" path="res://Main game/bullets/purp_bullet.tscn" id="2_3c02s"]
[ext_resource type="PackedScene" uid="uid://iqqtlitv2drr" path="res://Main game/bullets/yellow_bullet.tscn" id="3_qgi2m"]
[ext_resource type="Texture2D" uid="uid://dffjyyhiayako" path="res://Main game/player/new_jump.png" id="4_36iog"]
[ext_resource type="Texture2D" uid="uid://cmrpm00lvp6wq" path="res://Main game/player/Masha_idle-1200x185.png" id="5_w6w6v"]
[ext_resource type="Texture2D" uid="uid://l7ydsuvdfoqy" path="res://Main game/player/new_fast_run.png" id="6_hj21k"]
[ext_resource type="Texture2D" uid="uid://dqaf5n07rlp8a" path="res://Main game/health/health2.png" id="7_c61jo"]
[ext_resource type="Texture2D" uid="uid://ddf4g05osqwde" path="res://Main game/health/empty_bar_frame.png" id="8_ojvuu"]
[ext_resource type="Texture2D" uid="uid://4dk3hktlv0w0" path="res://Main game/buttons/settings1.png" id="9_hom40"]

[sub_resource type="Animation" id="Animation_f8odf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_m0t0n"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_eq5l3"]
resource_name = "idle"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 4, 5]
}

[sub_resource type="Animation" id="Animation_xeda4"]
resource_name = "jump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_53k3p"]
resource_name = "run"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_2r4m8"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"shoot"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wfud"]
_data = {
"RESET": SubResource("Animation_f8odf"),
"fall": SubResource("Animation_m0t0n"),
"idle": SubResource("Animation_eq5l3"),
"jump": SubResource("Animation_xeda4"),
"run": SubResource("Animation_53k3p"),
"shoot": SubResource("Animation_2r4m8")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_44s3o"]
atlas = ExtResource("4_36iog")
region = Rect2(1000, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xllvh"]
atlas = ExtResource("4_36iog")
region = Rect2(1250, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr6q4"]
atlas = ExtResource("4_36iog")
region = Rect2(1500, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_63n4i"]
atlas = ExtResource("4_36iog")
region = Rect2(1750, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_350rl"]
atlas = ExtResource("5_w6w6v")
region = Rect2(0, 0, 200, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fw77"]
atlas = ExtResource("5_w6w6v")
region = Rect2(200, 0, 200, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bnbt"]
atlas = ExtResource("5_w6w6v")
region = Rect2(400, 0, 200, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xe1l"]
atlas = ExtResource("5_w6w6v")
region = Rect2(600, 0, 200, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0wkt"]
atlas = ExtResource("5_w6w6v")
region = Rect2(800, 0, 200, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4umr"]
atlas = ExtResource("5_w6w6v")
region = Rect2(1000, 0, 200, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_kntbc"]
atlas = ExtResource("4_36iog")
region = Rect2(0, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_51gk8"]
atlas = ExtResource("4_36iog")
region = Rect2(250, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd8ne"]
atlas = ExtResource("4_36iog")
region = Rect2(500, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgmao"]
atlas = ExtResource("4_36iog")
region = Rect2(750, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_q42r7"]
atlas = ExtResource("4_36iog")
region = Rect2(1000, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi2uc"]
atlas = ExtResource("4_36iog")
region = Rect2(1250, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss5kb"]
atlas = ExtResource("4_36iog")
region = Rect2(1500, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uip57"]
atlas = ExtResource("4_36iog")
region = Rect2(1750, 0, 250, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p6lt"]
atlas = ExtResource("6_hj21k")
region = Rect2(0, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wj2q"]
atlas = ExtResource("6_hj21k")
region = Rect2(265, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk074"]
atlas = ExtResource("6_hj21k")
region = Rect2(530, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p8xk"]
atlas = ExtResource("6_hj21k")
region = Rect2(795, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvwi0"]
atlas = ExtResource("6_hj21k")
region = Rect2(1060, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gn7y"]
atlas = ExtResource("6_hj21k")
region = Rect2(1325, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu0uy"]
atlas = ExtResource("6_hj21k")
region = Rect2(1590, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fovvf"]
atlas = ExtResource("6_hj21k")
region = Rect2(1855, 0, 265, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7imgn"]
atlas = ExtResource("6_hj21k")
region = Rect2(795, 0, 265, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_42lpn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44s3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xllvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr6q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63n4i")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_350rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fw77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bnbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xe1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0wkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4umr")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kntbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51gk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd8ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgmao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q42r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi2uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss5kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uip57")
}],
"loop": true,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p6lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wj2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk074")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p8xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvwi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gn7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu0uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fovvf")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7imgn")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(318, 180)
script = ExtResource("1_5o2at")
purple_bullet = ExtResource("2_3c02s")
yellow_bullet = ExtResource("3_qgi2m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8wfud")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1.00136e-05, 13)
scale = Vector2(0.186683, 0.189987)
sprite_frames = SubResource("SpriteFrames_42lpn")
animation = &"shoot"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, 3)
zoom = Vector2(2.5, 2.5)
limit_left = 20
limit_top = -500
limit_bottom = 805
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(12, 9.00001)
scale = Vector2(1.42857, 1.33984)
polygon = PackedVector2Array(-14, -11.1954, -17.5, -5.22452, -16.8, 8.20992, -16.8, 16.4198, -8.39999, 16.4198, -2.8, 16.4198, -4.2, 8.20992, -4.90001, 2.23906, -3.5, -3.73181, -4.90001, -7.46359, -7.7, -10.449)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="MarkerRight" type="Marker2D" parent="."]
position = Vector2(21, 17)

[node name="MarkerLeft" type="Marker2D" parent="."]
position = Vector2(-32, 17)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control/CanvasLayer"]
texture_filter = 1
offset_left = 34.0
offset_top = 35.0
offset_right = 1085.0
offset_bottom = 522.0
scale = Vector2(0.63, 0.71)
value = 100.0
texture_progress = ExtResource("7_c61jo")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control/CanvasLayer"]
texture_filter = 1
anchors_preset = -1
anchor_right = 0.0807292
anchor_bottom = 0.0833333
offset_left = 7.0
offset_top = 7.0
offset_right = 141.0
offset_bottom = 63.0
texture = ExtResource("8_ojvuu")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Menu" type="Button" parent="Control/CanvasLayer"]
offset_left = 1055.0
offset_top = 8.0
offset_right = 1245.0
offset_bottom = 209.0
scale = Vector2(0.48, 0.48)
icon = ExtResource("9_hom40")
flat = true

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
